HTML layout complete and header time added

--- a/index.html
+++ b/index.html
@@ -30,9 +30,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class = "row" id = "hour-9">
+        <div class = "col-1 hour">9AM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-10">
+        <div class = "col-1 hour">10AM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-11">
+        <div class = "col-1 hour">11AM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-12">
+        <div class = "col-1 hour">12PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-13">
+        <div class = "col-1 hour">1PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-14">
+        <div class = "col-1 hour">2PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-15">
+        <div class = "col-1 hour">3PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-16">
+        <div class = "col-1 hour">4PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
+      <div class = "row" id = "hour-17">
+        <div class = "col-1 hour">5PM</div>
+        <textarea class = "col-10 description"></textarea>
+        <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src ="assets/js/script.js"></script>
   </body>
 </html>
