--- a/index.html
+++ b/index.html
@@ -31,47 +31,47 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class = "row" id = "hour-9">
-        <div class = "col-1 hour">9AM</div>
+        <div class = "col-1 hour text-center"><br><br>9AM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-10">
-        <div class = "col-1 hour">10AM</div>
+        <div class = "col-1 hour text-center"><br><br>10AM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-11">
-        <div class = "col-1 hour">11AM</div>
+        <div class = "col-1 hour text-center"><br><br>11AM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-12">
-        <div class = "col-1 hour">12PM</div>
+        <div class = "col-1 hour text-center"><br><br>12PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-13">
-        <div class = "col-1 hour">1PM</div>
+        <div class = "col-1 hour text-center"><br><br>1PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-14">
-        <div class = "col-1 hour">2PM</div>
+        <div class = "col-1 hour text-center"><br><br>2PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-15">
-        <div class = "col-1 hour">3PM</div>
+        <div class = "col-1 hour text-center"><br><br>3PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-16">
-        <div class = "col-1 hour">4PM</div>
+        <div class = "col-1 hour text-center"><br><br>4PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
       <div class = "row" id = "hour-17">
-        <div class = "col-1 hour">5PM</div>
+        <div class = "col-1 hour text-center"><br><br>5PM</div>
         <textarea class = "col-10 description"></textarea>
         <button class = "btn saveBtn col-1"><i class = "fas fa-save"></i></button>
       </div>
